# game-of-life

./: Cargo.toml  README.md
assets/shader/: compute.wgsl  mesh.wgsl
src/: camera.rs  core.rs  grid.rs  lib.rs  main.rs  runner.rs  transform.rs  vertex.rs
